Fixed aligning problem when options are present.

--- a/packages/ketchup/src/components/kup-tree/kup-tree.scss
+++ b/packages/ketchup/src/components/kup-tree/kup-tree.scss
@@ -49,7 +49,9 @@
         }
       }
 
-      & .cell-content {
+      & .kup-tree__icon ~ .cell-content,
+      & .kup-tree__icon + .cell-content,
+      & .cell-content.has-options {
         display: inline-block;
         line-height: 1rem;
         vertical-align: 0.325rem;
